added profile picture and social contacts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<script src="https://kit.fontawesome.com/08887e97bb.js"></script>
+
 	</head>
 	<body class="is-preload">
 
@@ -20,6 +24,7 @@
 					<li><a href="#skills">Skills</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href="#resume">Resume</a></li>
 				</ul>
 			</nav>
 
@@ -28,13 +33,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/andy.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hi. I'm <strong>Wai Chun Chan</strong>.</h1>
 							</header>
-							<p>A software developer graduated from <strong>AppAcademy</strong>.</p>
+							<p>I am a graduate at NYU and recently finished appAcademy to become a Fullstack developer. I'm experienced in Ruby, Rails, Javascript, HTML, CSS, React and Redux currently looking for new opportunities.</p>
 							<a href="#projects" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -49,31 +54,72 @@
 						<!-- <p></p> -->
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
+						<div class="col-4 col-6-medium col-12-small icon-skill">
+							<!-- <section class="box style1"> -->
+								<h3>Javascript</h3>
+								<span class="icon solid featured fab fa-js"></span>
+								<!-- <i class="fab fa-js"></i> -->
+							<!-- </section> -->
+						</div>
+						<div class="col-4 col-6-medium col-12-small icon-skill">
+							<!-- <section class="box style1"> -->
+								<!-- <span class="icon solid featured fa-camera-retro"></span> -->
+								<h3>Rails</h3>
+								<i class="icon solid featured devicon-rails-plain colored"></i>
+							<!-- </section> -->
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
+							<!-- <section class="box style1"> -->
+								<h3>Ruby</h3>
+								<span class="icon featured devicon-ruby-plain colored"></span>
+							<!-- </section> -->
 						</div>
 					</div>
+							<div class="row aln-center">
+								<div class="col-4 col-6-medium col-12-small icon-skill">
+										<h3>React</h3>
+										<span class="icon solid featured devicon-react-original colored"></span>
+										<!-- <i class="fab fa-js"></i> -->
+								</div>
+								<div class="col-4 col-6-medium col-12-small icon-skill">
+									<!-- <section class="box style1"> -->
+										<!-- <span class="icon solid featured fa-camera-retro"></span> -->
+										<h3>PostgreSQL</h3>
+										<i class="icon solid featured devicon-postgresql-plain colored"></i>
+									<!-- </section> -->
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+									<!-- <section class="box style1"> -->
+										<h3>AWS</h3>
+										<span class="icon featured devicon-amazonwebservices-original colored"></span>
+									<!-- </section> -->
+								</div>
+								
+							</div>
+							<div class="row aln-center">
+									<div class="col-4 col-6-medium col-12-small">
+											<!-- <section class="box style1"> -->
+												<h3>Heroku</h3>
+												<span class="icon featured devicon-heroku-plain colored"></span>
+											<!-- </section> -->
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+												<!-- <section class="box style1"> -->
+													<h3>Python</h3>
+													<span class="icon featured devicon-python-plain colored"></span>
+												<!-- </section> -->
+											</div>
+									<div class="col-4 col-6-medium col-12-small">
+										<!-- <section class="box style1"> -->
+											<h3>VS</h3>
+											<span class="icon featured devicon-visualstudio-plain colored"></span>
+										<!-- </section> -->
+									</div>
+									
+								</div>
+						</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<a href="#projects" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
 			</article>
@@ -83,41 +129,39 @@
 				<div class="container">
 					<header>
 						<h2>Projects</h2>
-						<p>With Ruby on Rails and Javascript.</p>
+						<p>Developed from Ruby and Javascript</p>
 					</header>
 					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="customize-project col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://aa-cloudnine.herokuapp.com/" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a target="_blank" href="https://aa-cloudnine.herokuapp.com/" class="image featured"><img src="images/fullstack.png" alt="" /></a>
 								<h3><a href="https://aa-cloudnine.herokuapp.com/">CloudNine</a></h3>
-								<p>•Launched a Soundcloud clone through Rails as a backend and React-Redux as a frontend to create a single page app.
-									•Integrated user authentication for sign in/sign up which uses BCrypt to hash user sensitive login information. 
-									•Designed a functional continuous play and pause music player by using Javascript audio object to create customizable options.
-									•Implemented the CRUD function that allowed users to do the necessary interactions regarding a music app.
-									•Outlined the components and the design of the website through react-redux and CSS to have a functionally and friendly UI.
-									•Established a connection between AWS and the project to store and extract media objects.</p>
+									<p>•		Integrated user authentication for sign in/sign up which uses BCrypt to hash user sensitive login information</p>
+									<p>•		Designed a functional continuous play and pause music player by using Javascript audio object with react lifecycle methods and redux to create play/pause function based off the UI player state</p>
+									<p>•		Designed a functional continuous play and pause music player by using Javascript audio object to create customizable options.</p>
+									<p>•		Implemented a playlist connected to the tracks model through a joins table in the backend allowing users to create playlists with tracks on the spot while rendering it all out</p>									
+									<p>•		Applied modals throughout the website which are controlled by the React-Redux state without redirecting users to a new/different page</p>
+									<p>•		Established a connection between AWS and the project to store and extract media objects allowing any user to view images and to listen to audio</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="customize-project col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://waiway7.github.io/AudioJS/" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a target="_blank" href="https://waiway7.github.io/AudioJS/" class="image featured"><img src="images/pokemon.png" alt="" /></a>
 								<h3><a href="https://waiway7.github.io/AudioJS/">Audio Visualizer</a></h3>
-								<p>•Disclosure flashing lights, please do not click if you have any form of seizure/epilepsy.
-									•Built an audio visualizer with vanilla javascript and a built in browser API (Web Audio API)
-									•Incorporated canvas element that draws the shape continuously creating a visually appealing visualizer 
-									•Implemented formulas with data generated from the API to produce a circular visualizer that is responsive to the sound of the track</p>
+									<p>•		Incorporated canvas element that draws the visualizer with a formula that grabs an arc of a circle which then draws bars based off the data gained from the Web Audio API</p>
+									<p>•		Implemented RMS and an arc formula to generate a responsive pulsating circle off with the data generated from the API to produce a circular visualizer that is responsive to the sound of the track</p>
+									<p>•		Devised a Pokemon theme visualization that’s interactive based off the RMS which changes the color of visualizer and the background</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<h3><a href="#">Lorem ipsum</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
-						</div>
+						</div> -->
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -127,10 +171,10 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<!-- <h2>Social Links</h2> -->
+						<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p> -->
 					</header>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-12">
 							<form method="post" action="#">
 								<div class="row">
@@ -154,15 +198,15 @@
 									</div>
 								</div>
 							</form>
-						</div>
+						</div> -->
 						<div class="col-12">
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="https://www.linkedin.com/in/wai-chun-chan-718035117/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://angel.co/wai-c-chan" class="icon brands fa-angellist"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="https://github.com/Waiway7" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/wai-chun-chan-718035117/" target="_blank" class="icon brands fa-linkedin-in no-highlight"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://angel.co/wai-c-chan" target="_blank" class="icon brands fa-angellist no-highlight"><span class="label">AngelList</span></a></li>
+								<!-- <li><a href="#" target="_blank" class="icon brands fa-google-plus no-highlight"><span class="label">Google+</span></a></li> -->
+								<li><a href="https://github.com/Waiway7" target="_blank" class="icon brands fa-github no-highlight"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
