added hyperlinks to projects

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<div class="customize-project col-6-medium col-12-small">
 							<article class="box style2">
 								<a target="_blank" href="https://aa-cloudnine.herokuapp.com/" class="image featured"><img src="images/fullstack.png" alt="" /></a>
-								<h3><a href="https://aa-cloudnine.herokuapp.com/">CloudNine</a></h3>
+								<h3><a target="_blank" href="https://aa-cloudnine.herokuapp.com/">CloudNine</a></h3>
 									<p>•		Integrated user authentication for sign in/sign up which uses BCrypt to hash user sensitive login information</p>
 									<p>•		Designed a functional continuous play and pause music player by using Javascript audio object with react lifecycle methods and redux to create play/pause function based off the UI player state</p>
 									<p>•		Designed a functional continuous play and pause music player by using Javascript audio object to create customizable options.</p>
@@ -150,7 +150,7 @@
 						<div class="customize-project col-6-medium col-12-small">
 							<article class="box style2">
 								<a target="_blank" href="https://waiway7.github.io/AudioJS/" class="image featured"><img src="images/pokemon.png" alt="" /></a>
-								<h3><a href="https://waiway7.github.io/AudioJS/">Audio Visualizer</a></h3>
+								<h3><a target="_blank" href="https://waiway7.github.io/AudioJS/">Audio Visualizer</a></h3>
 									<p>•		Incorporated canvas element that draws the visualizer with a formula that grabs an arc of a circle which then draws bars based off the data gained from the Web Audio API</p>
 									<p>•		Implemented RMS and an arc formula to generate a responsive pulsating circle off with the data generated from the API to produce a circular visualizer that is responsive to the sound of the track</p>
 									<p>•		Devised a Pokemon theme visualization that’s interactive based off the RMS which changes the color of visualizer and the background</p>
