added resume link, live links, repos, and skills

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li><a href="#skills">Skills</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="#resume">Resume</a></li>
+					<li><a target="_blank" href="/dist/files/Resume.pdf">Resume</a></li>
 				</ul>
 			</nav>
 
@@ -114,8 +114,38 @@
 											</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<!-- <section class="box style1"> -->
-											<h3>VS</h3>
-											<span class="icon featured devicon-visualstudio-plain colored"></span>
+											<h3>Redux</h3>
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" height="6em" width="6em">
+												<g fill="#764ABC">
+													<path
+														d="M65.6 65.4c2.9-.3 5.1-2.8 5-5.8-.1-3-2.6-5.4-5.6-5.4h-.2c-3.1.1-5.5 2.7-5.4 5.8.1 1.5.7 2.8 1.6 3.7-3.4 6.7-8.6 11.6-16.4 15.7-5.3 2.8-10.8 3.8-16.3 3.1-4.5-.6-8-2.6-10.2-5.9-3.2-4.9-3.5-10.2-.8-15.5 1.9-3.8 4.9-6.6 6.8-8-.4-1.3-1-3.5-1.3-5.1-14.5 10.5-13 24.7-8.6 31.4 3.3 5 10 8.1 17.4 8.1 2 0 4-.2 6-.7 12.8-2.5 22.5-10.1 28-21.4z" />
+													<path
+														d="M83.2 53c-7.6-8.9-18.8-13.8-31.6-13.8H50c-.9-1.8-2.8-3-4.9-3h-.2c-3.1.1-5.5 2.7-5.4 5.8.1 3 2.6 5.4 5.6 5.4h.2c2.2-.1 4.1-1.5 4.9-3.4H52c7.6 0 14.8 2.2 21.3 6.5 5 3.3 8.6 7.6 10.6 12.8 1.7 4.2 1.6 8.3-.2 11.8-2.8 5.3-7.5 8.2-13.7 8.2-4 0-7.8-1.2-9.8-2.1-1.1 1-3.1 2.6-4.5 3.6 4.3 2 8.7 3.1 12.9 3.1 9.6 0 16.7-5.3 19.4-10.6 2.9-5.8 2.7-15.8-4.8-24.3z" />
+													<path
+														d="M32.4 67.1c.1 3 2.6 5.4 5.6 5.4h.2c3.1-.1 5.5-2.7 5.4-5.8-.1-3-2.6-5.4-5.6-5.4h-.2c-.2 0-.5 0-.7.1-4.1-6.8-5.8-14.2-5.2-22.2.4-6 2.4-11.2 5.9-15.5 2.9-3.7 8.5-5.5 12.3-5.6 10.6-.2 15.1 13 15.4 18.3 1.3.3 3.5 1 5 1.5-1.2-16.2-11.2-24.6-20.8-24.6-9 0-17.3 6.5-20.6 16.1-4.6 12.8-1.6 25.1 4 34.8-.5.7-.8 1.8-.7 2.9z" />
+												</g>
+											</svg>
+										<!-- </section> -->
+									</div>
+									
+								</div>
+								<div class="row aln-center">
+									<div class="col-4 col-6-medium col-12-small">
+											<!-- <section class="box style1"> -->
+												<h3>Git</h3>
+												<span class="icon featured devicon-git-plain colored"></span>
+											<!-- </section> -->
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+												<!-- <section class="box style1"> -->
+													<h3>HTML5</h3>
+													<span class="icon featured devicon-html5-plain colored"></span>
+												<!-- </section> -->
+											</div>
+									<div class="col-4 col-6-medium col-12-small">
+										<!-- <section class="box style1"> -->
+											<h3>CSS</h3>
+											<span class="icon featured devicon-css3-plain colored"></span>
 										<!-- </section> -->
 									</div>
 									
@@ -145,6 +175,10 @@
 									<p>•		Implemented a playlist connected to the tracks model through a joins table in the backend allowing users to create playlists with tracks on the spot while rendering it all out</p>									
 									<p>•		Applied modals throughout the website which are controlled by the React-Redux state without redirecting users to a new/different page</p>
 									<p>•		Established a connection between AWS and the project to store and extract media objects allowing any user to view images and to listen to audio</p>
+									<div class="container-live">
+										<a class="no-style" target="_blank" href="https://aa-cloudnine.herokuapp.com/"><div class="live">Live</div></a>
+										<a class="no-style" href="https://github.com/Waiway7/CloudNine"><div class="repo">Repo</div></a>
+									</div>
 							</article>
 						</div>
 						<div class="customize-project col-6-medium col-12-small">
@@ -154,6 +188,10 @@
 									<p>•		Incorporated canvas element that draws the visualizer with a formula that grabs an arc of a circle which then draws bars based off the data gained from the Web Audio API</p>
 									<p>•		Implemented RMS and an arc formula to generate a responsive pulsating circle off with the data generated from the API to produce a circular visualizer that is responsive to the sound of the track</p>
 									<p>•		Devised a Pokemon theme visualization that’s interactive based off the RMS which changes the color of visualizer and the background</p>
+									<div class="container-live">
+										<a class="no-style" target="_blank" href="https://waiway7.github.io/AudioJS/"><div class="live">Live</div></a>
+										<a class="no-style" href="https://github.com/Waiway7/AudioJS"><div class="repo">Repo</div></a>
+									</div>
 							</article>
 						</div>
 						<!-- <div class="col-4 col-6-medium col-12-small">
@@ -173,10 +211,10 @@
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
-					<header>
-						<!-- <h2>Social Links</h2> -->
-						<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p> -->
-					</header>
+					<!-- <header>
+						<h2>Email</h2>
+						<p>wcc325@nyu.edu</p>
+					</header> -->
 					<!-- <div class="row">
 						<div class="col-12">
 							<form method="post" action="#">
@@ -208,7 +246,7 @@
 							<ul class="social">
 								<li><a href="https://www.linkedin.com/in/wai-chun-chan-718035117/" target="_blank" class="icon brands fa-linkedin-in no-highlight"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://angel.co/wai-c-chan" target="_blank" class="icon brands fa-angellist no-highlight"><span class="label">AngelList</span></a></li>
-								<!-- <li><a href="#" target="_blank" class="icon brands fa-google-plus no-highlight"><span class="label">Google+</span></a></li> -->
+								<li><a href="mailto:wcc325@nyu.edu" target="_blank" class="icon new fas fa-envelope no-highlight"><span class="label">Email</span></a></li>
 								<li><a href="https://github.com/Waiway7" target="_blank" class="icon brands fa-github no-highlight"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
