added resume link, live links, repos, and skills

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 									<p>•		Established a connection between AWS and the project to store and extract media objects allowing any user to view images and to listen to audio</p>
 									<div class="container-live">
 										<a class="no-style" target="_blank" href="https://aa-cloudnine.herokuapp.com/"><div class="live">Live</div></a>
-										<a class="no-style" href="https://github.com/Waiway7/CloudNine"><div class="repo">Repo</div></a>
+										<a class="no-style" target="_blank" href="https://github.com/Waiway7/CloudNine"><div class="repo">Repo</div></a>
 									</div>
 							</article>
 						</div>
@@ -190,7 +190,7 @@
 									<p>•		Devised a Pokemon theme visualization that’s interactive based off the RMS which changes the color of visualizer and the background</p>
 									<div class="container-live">
 										<a class="no-style" target="_blank" href="https://waiway7.github.io/AudioJS/"><div class="live">Live</div></a>
-										<a class="no-style" href="https://github.com/Waiway7/AudioJS"><div class="repo">Repo</div></a>
+										<a class="no-style" target="_blank" href="https://github.com/Waiway7/AudioJS"><div class="repo">Repo</div></a>
 									</div>
 							</article>
 						</div>
